Fix avatar visibility - don't hide td.posters, position it instead

--- a/common/common.scss
+++ b/common/common.scss
@@ -282,9 +282,9 @@ table.topic-list tr:hover td {
 }
 
 .topic-list-item {
-  // Reset all table cells
+  // Reset all table cells to not display as table cells
   > td {
-    display: none;
+    display: block;
     padding: 0;
     border: none;
     background: none;
@@ -296,14 +296,25 @@ table.topic-list tr:hover td {
     padding: 0;
   }
 
-  // Posters (avatars) - hide for now
+  // Posters cell - keep for avatar positioning
   > td.posters {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    overflow: visible;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  // Hide table-style num/activity cells (we show this data differently)
+  > td.num,
+  > td.activity {
     display: none !important;
   }
 
-  // Hide other cells
-  > td.num,
-  > td.activity,
+  // Hide thumbnail cell (handled separately)
   > td.topic-thumbnail {
     display: none !important;
   }
